--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,25 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.408.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@rsbuild/core": "1.0.1-beta.1",
     "@rsbuild/plugin-react": "1.0.1-beta.1",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
 }
