--- a/frontend/components.json
+++ b/frontend/components.json
@@ -4,15 +4,15 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "src/App.css",
+    "config": "src/tailwind.config.js",
+    "css": "src/app/index.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "@/shared/components",
-    "utils": "@/shared/utils",
-    "ui": "@/shared/ui"
+    "components": "@shared/components",
+    "ui": "@shared/ui",
+    "utils": "@shared/lib/utils/utils"
   }
 }
