--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "frontend",
+  "name": "spring-boot-react18-rsbuild",
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "rsbuild dev --open",
     "build": "rsbuild build",
+    "dev": "rsbuild dev",
+    "format": "prettier --write .",
+    "lint": "eslint .",
     "preview": "rsbuild preview"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-router-dom": "^6.24.1",
+    "remixicon": "^4.1.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.6.0",
     "@rsbuild/core": "1.0.1-beta.1",
-    "@rsbuild/plugin-react": "1.0.1-beta.1",
+    "@rsbuild/plugin-react": "^1.0.1-beta.1",
+    "@rsbuild/plugin-sass": "^1.0.1-beta.3",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "postcss": "^8.4.39",
-    "postcss-loader": "^8.1.1",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
+    "eslint": "^9.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.2",
+    "tailwind-merge": "^2.4.0",
+    "typescript-eslint": "^7.16.0"
   }
 }
