--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.9",
+    "@tanstack/react-query-devtools": "^5.51.9",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
@@ -18,9 +21,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "remixicon": "^4.1.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2",
-    "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@rsbuild/core": "1.0.1-beta.1",
     "@rsbuild/plugin-react": "^1.0.1-beta.1",
     "@rsbuild/plugin-sass": "^1.0.1-beta.3",
+    "@tanstack/eslint-plugin-query": "^5.51.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
