--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,6 +17,7 @@
       "@/*": ["./src/*"],
       "@pages/*": ["./src/pages/*"],
       "@shared/*": ["./src/shared/*"],
+      "@entites/*": ["./src/entites/*"],
       "@widgets/*": ["./src/widgets/*"],
       "@assets/*": ["./src/assets/*"]
     }
