fix: Alert, Delete Item, Breadcrumb

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,7 @@
       "@shared/*": ["./src/shared/*"],
       "@entites/*": ["./src/entites/*"],
       "@widgets/*": ["./src/widgets/*"],
+      "@features/*": ["./src/features/*"],
       "@assets/*": ["./src/assets/*"]
     }
   },
